# keyboardcontrolV3

./: .gitignore  README.md  default.nix  pyproject.toml  run
config/: config.json  config_backup.json  configout.json  sent_hi.py
docs/: conventions.md
keyboardcontrolv3/: __init__.py  add_event_dialog.py  add_item_dialog.py  item.py  main.py  main_ui.py
keyboardcontrolv3/plugin_categories/: __init__.py  action_plugin.py  event_plugin.py
keyboardcontrolv3/plugins/: applications.kb-plugin  keyboard_event.kb-plugin  mouse_event.kb-plugin  python_scripts.kb-plugin  scheduler_event.kb-plugin  sheduler_event.kb-plugin  web_inject.kb-plugin
keyboardcontrolv3/plugins/applications/: __init__.py  application_plugin.py
keyboardcontrolv3/plugins/keyboard_event/: __init__.py  keyboard_plugin.py
keyboardcontrolv3/plugins/mouse_event/: __init__.py  mouse_plugin.py
keyboardcontrolv3/plugins/python_scripts/: __init__.py  python_script_plugin.py
keyboardcontrolv3/plugins/scheduler_event/: __init__.py  scheduler_plugin.py
keyboardcontrolv3/plugins/sheduler_event/: sheduler_plugin.py
keyboardcontrolv3/plugins/webinject/: __init__.py  web_inject_plugin.py
keyboardcontrolv3/ui/: main_ui.py  main_ui.ui
